--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
+    "python-shell": "^2.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
